--- a/.config/compton/config
+++ b/.config/compton/config
@@ -60,22 +60,22 @@ shadow = true;
 # Don't draw shadows on DND windows.
 no-dnd-shadow = true;
 # Avoid drawing shadows on dock/panel windows.
-no-dock-shadow = true;
+no-dock-shadow = true; # TODO: set to false and fix nm-applet shadow
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 clear-shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 5;
+shadow-radius = 8;
 # The left offset for shadows. (default -15)
-shadow-offset-x = -5;
+shadow-offset-x = 0;
 # The top offset for shadows. (default -15)
-shadow-offset-y = -5;
+shadow-offset-y = 0;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.5;
+shadow-opacity = 0.6;
 
 # Set if you want different colour shadows
-# shadow-red = 0.0;
-# shadow-green = 0.0;
-# shadow-blue = 0.0;
+shadow-red = 0.1;
+shadow-green = 0.0;
+shadow-blue = 0.1;
 
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
@@ -97,8 +97,11 @@ shadow-exclude = [
     "class_g ?= 'Cairo-dock'",
     "_GTK_FRAME_EXTENTS@:c"
 ];
+
+#shadow-exclude-reg = "x40+0+0";
+
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
-shadow-ignore-shaped = false;
+shadow-ignore-shaped = true;
 
 #################################
 #
@@ -107,7 +110,7 @@ shadow-ignore-shaped = false;
 #################################
 
 menu-opacity = 1;
-inactive-opacity = 1;
+inactive-opacity = 0.9;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
@@ -137,11 +140,11 @@ blur-background-exclude = [
 # Fade windows during opacity changes.
 fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 4;
+fade-delta = 10;
 # Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.03;
 # Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.03;
+fade-out-step = 0.05;
 # Fade windows in/out when opening/closing
 # no-fading-openclose = true;
 
