--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -43,19 +43,19 @@ draw_bold_text_with_bright_colors: true
 font:
   # The normal (roman) font face to use.
   normal:
-    family: "Wuncon Siji:style=Regular" # should be "Menlo" or something on macOS.
+    family: hack # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Regular
 
   # The bold font face
   bold:
-    family: "Wuncon Siji:style=Regular" # should be "Menlo" or something on macOS.
+    family: hack:style=bold # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Bold
 
   # The italic font face
   italic:
-    family: "Wuncon Siji:style=Regular" # should be "Menlo" or something on macOS.
+    family: hack:style=italic # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Italic
 
