--- a/.config/xbindkeys/config
+++ b/.config/xbindkeys/config
@@ -1,22 +1,3 @@
-# For the benefit of emacs users: -*- shell-script -*-
-###########################
-# xbindkeys configuration #
-###########################
-#
-# Version: 1.8.6
-#
-# If you edit this file, do not forget to uncomment any lines
-# that you change.
-# The pound(#) symbol may be used anywhere for comments.
-#
-# To specify a key, you can use 'xbindkeys --key' or
-# 'xbindkeys --multikey' and put one of the two lines in this file.
-#
-# The format of a command line is:
-#    "command to start"
-#       associated key
-#
-#
 # A list of keys is in /usr/include/X11/keysym.h and in
 # /usr/include/X11/keysymdef.h
 # The XK_ is not needed.
@@ -36,28 +17,23 @@
 #keystate_numlock = enable
 #keystate_capslock = enable
 #keystate_scrolllock= enable
-
-# Examples of commands:
-
-"xbindkeys_show" 
-  control+shift + q
-
-# set directly keycode (here control + f with my keyboard)
-#"xterm"
-#  c:41 + m:0x4
-
-# specify a mouse button
-#"xterm"
-#  control + b:2
+#    m:0x40 + c:21
+    
 
 "amixer sset Master 5%+ unmute"
   XF86AudioRaiseVolume
+"amixer sset Master 5%+ unmute"
+  Mod4 + equal
 
 "amixer sset Master 5%- unmute"
   XF86AudioLowerVolume
+"amixer sset Master 5%- unmute"
+  Mod4 + minus
 
-"amixer set Master toggle"
-  XF86AudioMute
+"amixer sset Master toggle"
+	XF86AudioMute
+"amixer sset Master toggle"
+  Mod4 + backslash
 
 "xbacklight -inc 10"
   XF86MonBrightnessUp
@@ -66,21 +42,3 @@
   XF86MonBrightnessDown
 
 
-#"xterm -geom 50x20+20+20"
-#   Shift+Mod2+alt + s
-#
-## set directly keycode (here control+alt+mod2 + f with my keyboard)
-#"xterm"
-#  alt + c:0x29 + m:4 + mod2
-#
-## Control+Shift+a  release event starts rxvt
-#"rxvt"
-#  release+control+shift + a
-#
-## Control + mouse button 2 release event starts rxvt
-#"rxvt"
-#  Control + b:2 + Release
-
-##################################
-# End of xbindkeys configuration #
-##################################
