--- a/.config/compton/config
+++ b/.config/compton/config
@@ -110,14 +110,14 @@ shadow-ignore-shaped = true;
 #################################
 
 menu-opacity = 1;
-inactive-opacity = 0.9;
+inactive-opacity = 0.85;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
 alpha-step = 0.05;
 
 # Dim inactive windows. (0.0 - 1.0)
-# inactive-dim = 0.2;
+inactive-dim = 0.3;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
@@ -125,7 +125,7 @@ alpha-step = 0.05;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
+# blur-background-fixed = true;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'"
