--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -3,7 +3,7 @@
 
 config_version: 1
 global:
-  backend: webkit
+  backend: webengine
   colors.hints.bg: black
   colors.hints.fg: white
   colors.hints.match.fg: '#88FF88'
